added download resume functionality

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 
         </div>
 
+        <!-- Download Resume -->
+
+        <div class="resume-container">
+            <h1>Download My Resume</h1>
+            <a href="/resources/Resume.pdf" download><button><img src="/resources/download.svg" alt=""> Resume</button></a>
+        </div>
+
 
         <!--Projects-->
         <div class="projects-section">
